Update docker-compose with image tag (#119)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
-playwithsix:
-  build: .
-  environment:
-    PORT: 3000
-  ports:
-    - 3000:3000
+version: '2'
+
+services:
+  playwithsix:
+    build: .
+    image: anrop/anrop-playwithsix
+    environment:
+      PORT: 3000
+    ports:
+      - 3000:3000
